# open_vins_example

./: .gitignore  Dockerfile  README.md  calibrate.py  flash.sh  imu.yaml  rsync.sh  toolchain.cmake
SourceAndroidApp/: AndroidManifest.xml  install.sh
SourceAndroidApp/src/: main.c
calibrate/: CMakeLists.txt  main.cpp  script.py
config/custom/: config_cam.yaml
config/tum/: config.yaml
datasets/: .gitignore  download.sh
docs/limba2025/: .gitignore  1_Introduction.tex  2_VIO.tex  3_Hardware.tex  4_OpenVINS.tex  build.sh  main.tex  open.sh  preambula.tex
docs/limba2025/csv/: cam0_data.csv  imu0_data.csv
example/: CMakeLists.txt
example/config/custom/: config.yaml
example/include/: ListenerOpenVINS.hpp  ListenerRecord.hpp  Source.hpp  SourceHardware.hpp  SourceReplay.hpp  Visualization.hpp
example/src/: ListenerOpenVINS.cpp  ListenerRecord.cpp  Source.cpp  SourceHardware.cpp  SourceReplay.cpp  Visualization.cpp  main.cpp
example_android/: AndroidManifest.xml  CMakeLists.txt  install.sh
example_android/res/values/: strings.xml
example_android/src/: main.c
example_dataset/: CMakeLists.txt  config.yaml
example_dataset/src/: main.cpp
mpu6050/: Makefile  mpu6050.c  mpu6050.h
recorder/: CMakeLists.txt
recorder/include/: Recorder.hpp  Source.hpp  SourceHardware.hpp
recorder/src/: Recorder.cpp  SourceHardware.cpp  main.cpp
vio/: CMakeLists.txt  config.yaml  imu.yaml  imucam.yaml
vio/config/custom/: config_cam.yaml
vio/config/euroc/: config_cam.yaml  config_imu.yaml
vio/include/: SourceAndroid.hpp  SourceDataset.hpp  SourceHardware.hpp  SourceSensor.hpp  Visualization.hpp
vio/src/: Source.cpp  SourceAndroid.cpp  SourceDataset.cpp  SourceHardware.cpp  SourceSensor.cpp  Visualization.cpp  main.cpp
